[tool.poetry]
name = "stratbot"
version = "0.1.0"
description = ""
authors = ["snwflake <vm@snwflake.ml>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.21.1"
"discord.py" = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
